# fdmorbs

./: .cruft.json  .gitignore  README.rst  pyproject.toml  tox.ini
docs/: conf.py  index.rst
fdmorbs/: __init__.py
fdmorbs/potential/: __init__.py  base.py  fdm.py  potential_plot.py
fdmorbs/simulation/: __init__.py  simulation.py  simulation_plot.py
fdmorbs/utils/: __init__.py  adjust_files.py
licenses/: LICENSE.rst
