[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "fdmorbs"
description = "Package for conveniently creating and analyzing Fuzzy Dar"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "S. Gabriel Pfaffman", email = "gabriel.pfaffman@mail.utoronto.ca" },
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["fdmorbs*"]

[tool.setuptools_scm]
version_file = "fdmorbs/version.py"

[tool.pytest.ini_options]
testpaths = [
  "fdmorbs",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "fdmorbs/__init*",
 "fdmorbs/conftest.py",
 "fdmorbs/*setup_package*",
 "fdmorbs/tests/*",
 "fdmorbs/*/tests/*",
 "fdmorbs/extern/*",
 "fdmorbs/version*",
 "*/fdmorbs/__init*",
 "*/fdmorbs/conftest.py",
 "*/fdmorbs/*setup_package*",
 "*/fdmorbs/tests/*",
 "*/fdmorbs/*/tests/*",
 "*/fdmorbs/extern/*",
 "*/fdmorbs/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
